--- a/sass/core/settings.scss
+++ b/sass/core/settings.scss
@@ -89,7 +89,7 @@ $button-hover-bg:       $link-hover;
 
 // Forms
 $form-border:           darken($white, 6%);
-$form-focus-border:     $link-hover;
+$form-focus-border:     $link-color;
 
 $form-bg:               darken($white, 2%);
 $form-focus-bg:         darken($white, 1.5%);
