--- a/sass/core/settings.scss
+++ b/sass/core/settings.scss
@@ -239,7 +239,7 @@ $y-space-lg:   		4.8rem;
 */
 
 /* === BORDER RADIUS === */
-$border-radius: none;
+$round: 1px;
 
 /* === HEADER === */
 $header-pad: 1rem;
