--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -53,6 +53,7 @@
 =
 ========================================================================== */
 @import "modules/transcription";
+@import "modules/inputs";
 @import "modules/navs";
 @import "modules/header";
 @import "modules/footer";
