--- a/sass/core/buttons.scss
+++ b/sass/core/buttons.scss
@@ -23,12 +23,13 @@ button {
 
 .btn,
 .button,
-[type='submit']:not([class]) {
+[type='submit']:not([class]),
+[type='reset']:not([class]) {
 	display: inline-block;
 	flex-shrink: 0;
 	min-width: 8rem;
 	border: 2px solid $button-border;
-	border-radius: $border-radius;
+	border-radius: $round;
 	background-color: $button-bg;
 	padding: 0.5rem 1.4rem;
 	letter-spacing: 2px;
@@ -73,75 +74,80 @@ button {
 
 /* === button types === */
 
-/* square button */
-.btn-square {
-	border-radius: 0;
-}
+.btn,
+.button {
+	$self: &;
 
-/* rounded button */
-.btn-rounded {
-	border-radius: 0.2em;
-}
-	  
-/* pill button */
-.btn-pill {
-	border-radius: 2.4em;
-}
-
-/* border button */
-.btn-border {
-	border-color: $button-border;
-	background: transparent;
-	padding: 0.55rem 1.4rem;
-	font-size: 0.7rem;
-	color: $button-border;
-	
-	&:hover,
-	&:focus {
-		border-color: $button-hover-border;
-		background-color: $button-hover-bg;
-		color: $button-hover-border;
+	/* square button */
+	&--square {
+		border-radius: 0;
 	}
-}
 
-/* slim button */
-.btn-sm,
-.btn-slim {
-	border-width: 1px;
-	padding: 0.45rem 1.2rem;
-	font-size: 0.7rem;
-	font-weight: normal;
-
-	&.btn-border {
-		padding: 0.5rem 1.2rem;
-		font-size: 0.6rem;
+	/* rounded button */
+	&--rounded {
+		border-radius: 0.2em;
 	}
-}
+		
+	/* pill button */
+	&--pill {
+		border-radius: 9999px;
+	}
 
-/* avrg button */
-.btn-md,
-.btn-avrg {
-	border-width: 2px;
-	padding: 0.5rem 1.4rem;
-	font-size: 0.8rem;
-
-	&.btn-border {
-		padding: 0.6rem 1.3rem;
+	/* border button */
+	&--border {
+		border-color: $button-border;
+		background: transparent;
+		padding: 0.55rem 1.4rem;
 		font-size: 0.7rem;
+		color: $button-border;
+		
+		&:hover,
+		&:focus {
+			border-color: $button-hover-border;
+			background-color: $button-hover-bg;
+			color: $button-hover-border;
+		}
 	}
-}
 
-/* phat button */
-.btn-lg,
-.btn-phat {
-	border-width: 2px;
-	padding: 0.8rem 2.4rem;
-	font-size: 0.8rem;
-	font-weight: bold;
+	/* slim button */
+	&--sm,
+	&--slim {
+		border-width: 1px;
+		padding: 0.45rem 1.2rem;
+		font-size: 0.7rem;
+		font-weight: normal;
 
-	&.btn-border {
-		padding: 0.7rem 2.4rem;
+		&#{$self}--border {
+			padding: 0.5rem 1.2rem;
+			font-size: 0.6rem;
+		}
+	}
+
+	/* avrg button */
+	&--md,
+	&--avrg {
+		border-width: 2px;
+		padding: 0.5rem 1.4rem;
 		font-size: 0.8rem;
+
+		&#{$self}--border {
+			padding: 0.6rem 1.3rem;
+			font-size: 0.7rem;
+		}
+	}
+
+	/* phat button */
+	&--lg,
+	&--phat {
+		border-width: 2px;
+		padding: 0.8rem 2.4rem;
+		font-size: 0.8rem;
+		font-weight: bold;
+
+		&#{$self}--border {
+			padding: 0.7rem 2.4rem;
+			font-size: 0.8rem;
+		}
 	}
 }
 
