--- a/sass/layout/flex-layout.scss
+++ b/sass/layout/flex-layout.scss
@@ -21,10 +21,10 @@
 
 // justify
 .justy-start {
-	justify-content: start;
+	justify-content: flex-start;
 }
 .justy-end {
-	justify-content: end;
+	justify-content: flex-end;
 }
 .justy-center {
 	justify-content: center;
