--- a/sass/modules/inputs.scss
+++ b/sass/modules/inputs.scss
@@ -5,6 +5,7 @@
 */
 
 @import "inputs/checkbox";
+@import "inputs/radio";
 @import "inputs/toggle";
 @import "inputs/select";
 @import "inputs/slider";
