--- a/sass/modules/inputs/checkbox.scss
+++ b/sass/modules/inputs/checkbox.scss
@@ -5,18 +5,15 @@
 */
 
 .checkbox {
-	display: flex;
+	display: inline-flex;
 	align-items: center;
-
-	$checkbox-size: 1.2rem;
+	font-size: 24px;
+	cursor: pointer;
 
 	input[type=checkbox] {
 		position: absolute;
-		z-index: 99;
-		width: $checkbox-size;
-		height: $checkbox-size;
+		z-index: -1;
 		opacity: 0;
-		cursor: pointer;
 	}
 
 	&__box {
@@ -24,26 +21,24 @@
 		align-items: center;
 		position: relative;
 		flex-shrink: 0;
-		width: $checkbox-size;
-		height: $checkbox-size;
-		border: 2px solid $text-color;
+		width: 1em;
+		height: 1em;
 		border-radius: $round;
+		border: 2px solid $text-color;
 		background-color: $form-border;
 		padding: 1px;
-		transition: all 0.3s ease 200ms;
+		transition: background-color 200ms ease 200ms;
+	}
+
+	& > &__label {
+		margin-left: 0.6rem;
 	}
 
 	&__label {
-		padding-left: 0.8rem;
+		white-space: nowrap;
+		text-transform: uppercase;
 		font-family: $link-font;
 		font-size: 0.8rem;
-		text-transform: uppercase;
-		white-space: nowrap;
-		cursor: pointer;
-
-		span {
-			text-transform: lowercase;
-		}
 	}
 	
 	.icon-checkmark {
@@ -60,7 +55,7 @@
 			stroke-linejoin: round;
 			stroke-dasharray: 18px;
 			stroke-dashoffset: 18px;
-			transition: all 0.3s ease;
+			transition: stroke-dashoffset 200ms ease;
 		}
 	}
 	
@@ -71,8 +66,22 @@
 		.icon-checkmark {
 			.check-line {
 				stroke-dashoffset: 0;
-				transition: all 200ms ease 200ms;
+				transition: stroke-dashoffset 200ms ease 200ms;
 			}
+		}
+	}
+
+	$self: &;
+
+	@include between( mobile, tablet ) {
+		font-size: 20px;
+	}
+
+	@include below( mobile ) {
+		font-size: 16px;
+
+		#{$self}__box {
+			border-width: 1px;
 		}
 	}
 }
