--- a/sass/modules/inputs/slider.scss
+++ b/sass/modules/inputs/slider.scss
@@ -2,77 +2,99 @@
 |––––––––––––––––––––––––––––––––––––––––––––––––––
 | MODULES: Slider 
 |––––––––––––––––––––––––––––––––––––––––––––––––––
-
-<div class="slider">
-	<input type="range" min="0" :max="max" class="slider__input" :value="value" @input="onInput">
-	<div class="slider__thumb" :style="rangeThumbPosition"></div>
-</div>
-	
 */
 
 .slider {
 	position: relative;
 	border-radius: $round;
 	width: 100%;
-	height: 2rem;
+	height: 1.2rem;
 
-	&::before {
+	$self: &;
+
+	&__input {
 		position: absolute;
+		z-index: 1;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		outline: none;
+		width: 100%;
+		height: inherit;
+		background: transparent;
+		padding: 0;
+		line-height: 0;
+
+		// &:focus {
+		// 	outline: 2px dashed rgba($accent, 0.8);
+		// }
+	}
+
+	&__track {
+		position: absolute;
+		z-index: 0;
 		top: 50%;
+		right: 0;
+		bottom: unset;
+		left: 0;
 		transform: translateY(-50%);
-		border-radius: inherit;
+		border-radius: 9999px;
 		width: 100%;
 		height: 8px;
 		background-color: $charcoal;
 		content: '';
 	}
-	
-	&__input {
-		position: absolute;
-		z-index: 1;
-		width: 100%;
-		height: inherit;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;
-		background: transparent;
-		outline: none;
-	}
 
 	&__thumb {
 		position: absolute;
 		z-index: 0;
-		background-color: currentColor;
-		width: 0;
-		height: inherit;
+		top: 50%;
 		bottom: 0;
+		transform: translateY(-50%);
+		border-radius: 2px;
+		border: 2px solid transparent;
+		background-color: currentColor;
+		width: 8px;
+		height: inherit;
 		color: $accent;
-
-		&::before,
-		&::after {
-			position: absolute;
-			bottom: 0;
-			content: '';
-		}
-
-		&::before {
-			left: 0;
-			transform: translateX(-100%);
-			border-top: 4px solid transparent;
-			border-right: 3px solid currentColor;
-			border-bottom: 4px solid currentColor;
-			border-left: 3px solid transparent;
-		}
-		&::after {
-			right: 0;
-			transform: translateX(100%);
-			border-top: 4px solid transparent;
-			border-right: 3px solid transparent;
-			border-bottom: 4px solid currentColor;
-			border-left: 3px solid currentColor;
-		}
 	}
+
+	&--triangle {
+		padding: 0 2px;
+
+		#{$self}__thumb {
+			border-radius: 0;
+			border: none;
+			background-color: transparent;
+			width: 0;
+			height: 8px;
+	
+			&::before,
+			&::after {
+				position: absolute;
+				bottom: 0;
+				content: '';
+			}
+	
+			&::before {
+				left: 0;
+				transform: translateX(-100%);
+				border-top: 4px solid transparent;
+				border-right: 3px solid currentColor;
+				border-bottom: 4px solid currentColor;
+				border-left: 3px solid transparent;
+			}
+			&::after {
+				right: 0;
+				transform: translateX(100%);
+				border-top: 4px solid transparent;
+				border-right: 3px solid transparent;
+				border-bottom: 4px solid currentColor;
+				border-left: 3px solid currentColor;
+			}
+		}
+	}	
 	
 	// unset default range styles
 	input[type=range] {
