--- a/sass/core/forms.scss
+++ b/sass/core/forms.scss
@@ -4,6 +4,11 @@
 |––––––––––––––––––––––––––––––––––––––––––––––––––
 */
 
+form {
+	display: block;
+	max-width: $text-max;
+}
+
 br,
 .break {
 	display: block;
@@ -11,36 +16,34 @@ br,
 	content: '';
 }
 
-form {
-	display: block;
-	max-width: $text-max;
-}
-
-label {
-	display: inline-block;
-	vertical-align: middle;
+label,
+.label {
+	white-space: nowrap;
+	text-transform: uppercase;
+	font-family: $link-font;
+	font-size: 0.8rem;
 }
 
 label[for] {
 	display: inline-flex;
 	align-items: center;
+	position: relative;
 	cursor: pointer;
 }
-
 
 input,
 select,
 textarea,
 fieldset,
-.input,
-.textarea {
+.input {
 	display: block;
-	width: 100%;
+	margin: 0;
 	outline: none;
 	box-shadow: none;
 	border: 2px solid $form-border;
 	border-radius: $round;
 	background-color: $form-bg;
+	width: 100%;
 	padding: 0.5em 0.8em;
 	line-height: 1;
 	font-size: $font-size;
@@ -60,6 +63,12 @@ fieldset,
 	}
 }
 
+.input--override {
+	position: absolute;
+	z-index: -1;
+	opacity: 0;
+}
+
 input[readonly],
 fieldset {
 	&:focus,
@@ -70,7 +79,8 @@ fieldset {
 }
 
 legend {
-	padding: 0.1em 0.3em;
+	padding: 0 0.4em;
+	margin: 0 -0.4em;
 }
 
 select {
@@ -117,5 +127,9 @@ input[type="radio"] {
 }
 
 input[type="range"] {
+	cursor: pointer;
+}
+
+input[type="file"] {
 	cursor: pointer;
 }
