--- a/sass/modules/inputs/checkbox.scss
+++ b/sass/modules/inputs/checkbox.scss
@@ -10,12 +10,6 @@
 	font-size: 24px;
 	cursor: pointer;
 
-	input[type=checkbox] {
-		position: absolute;
-		z-index: -1;
-		opacity: 0;
-	}
-
 	&__box {
 		display: flex;
 		align-items: center;
@@ -28,45 +22,38 @@
 		background-color: $form-border;
 		padding: 1px;
 		transition: background-color 200ms ease 200ms;
-
-		.icon-checkmark {
-			position: relative;
-			width: 100%;
-			height: inherit;
-			fill: transparent;
 	
-			.check-line {
-				fill: none;
-				stroke: $text-color;
-				stroke-width: 3;
-				stroke-linecap: round;
-				stroke-linejoin: round;
-				stroke-dasharray: 18px;
-				stroke-dashoffset: 18px;
-				transition: stroke-dashoffset 200ms ease;
-			}
-		}
-	
-		input[type=checkbox]:checked + & {
+		:checked + & {
 			background-color: $form-focus-border;
 			transition: background-color 200ms ease;
 
-			.icon-checkmark .check-line {
+			.checkbox__icon__line {
 				stroke-dashoffset: 0;
 				transition: stroke-dashoffset 200ms ease 200ms;
 			}
 		}
 	}
 
-	& > &__label {
-		margin-left: 0.6rem;
+	&__icon {
+		position: relative;
+		width: 100%;
+		height: inherit;
+		fill: transparent;
+
+		&__line {
+			fill: none;
+			stroke: $text-color;
+			stroke-width: 3;
+			stroke-linecap: round;
+			stroke-linejoin: round;
+			stroke-dasharray: 18px;
+			stroke-dashoffset: 18px;
+			transition: stroke-dashoffset 200ms ease;
+		}
 	}
 
-	&__label {
-		white-space: nowrap;
-		text-transform: uppercase;
-		font-family: $link-font;
-		font-size: 0.8rem;
+	& > .label {
+		margin-left: 0.6rem;
 	}
 
 	$self: &;
