--- a/sass/modules/inputs/radio.scss
+++ b/sass/modules/inputs/radio.scss
@@ -10,12 +10,6 @@
 	font-size: 24px;
 	cursor: pointer;
 
-	input[type=radio] {
-		position: absolute;
-		z-index: -1;
-		opacity: 0;
-	}
-
 	&__box {
 		display: flex;
 		position: relative;
@@ -31,24 +25,17 @@
 			flex: 1;
 			transform: scale(0);
 			background-color: $form-focus-border;
-			content: '';
 			transition: transform 200ms ease;
+			content: '';
 		}
 	
-		input[type=radio]:checked + &::before {
+		:checked + &::before {
 			transform: scale(1);
 		}
 	}
 
-	& > &__label {
+	& > .label {
 		margin-left: 0.6rem;
-	}
-
-	&__label {
-		white-space: nowrap;
-		text-transform: uppercase;
-		font-family: $link-font;
-		font-size: 0.8rem;
 	}
 
 	$self: &;
