--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -78,6 +78,7 @@
 @import "components/pagination";
 @import "components/heading-content";
 @import "components/video";
+@import "components/book";
 @import "components/twitter-feed";
 
 
