--- a/src/sass/core/body.scss
+++ b/src/sass/core/body.scss
@@ -15,6 +15,8 @@ html {
 }
 
 body {
+	overflow-x: hidden;
+	overflow-y: scroll;
 	background-color: white;
 	line-height: 1;
 	font-size: $font-size;
